added api to verify email
