# modules/auth/model/dto/send_email_registration_verification_code_request.go
@@ -1,0 +1,5 @@
+package dto
+
+type SendEmailVerificationCodeRequest struct {
+	Email string `json:"email" binding:"required,email"`
+}
