# modules/auth/model/dto/verify_email_registration_code_request.go
@@ -1,0 +1,6 @@
+package dto
+
+type VerifyEmailRegistrationCodeRequest struct {
+	Code  string `json:"code" binding:"required"`
+	Email string `json:"email" binding:"required"`
+}
