# modules/otp/model/otp.go
@@ -3,7 +3,9 @@ package model
 import (
 	"j-ai-trade/common"
 	"log"
+	"time"
 
+	"github.com/google/uuid"
 	"gorm.io/gorm"
 )
 
@@ -13,6 +15,11 @@ const (
 
 type Otp struct {
 	common.BaseModel
+	UserID    uuid.UUID `gorm:"not null"`
+	Code      string    `gorm:"not null"`
+	ExpiresAt time.Time `gorm:"not null"`
+	Used      bool      `gorm:"default:false"`
+	Type      string    `gorm:"not null"`
 }
 
 func (*Otp) TableName() string {
